<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin_add_pharmacy_extend">

    <TextView
        android:id="@+id/req_date_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="14dp"
        android:text="@string/doc_req_date"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_num_txt2" />

    <TextView
        android:id="@+id/documents_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="14dp"
        android:text="@string/doc_docs"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/req_date_txt2" />

    <TextView
        android:id="@+id/name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="14dp"
        android:text="@string/pharmacy_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_txt2" />

    <TextView
        android:id="@+id/request_txt2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="34dp"
        android:text="@string/pharmacy_request_ID"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_approval3" />

    <TextView
        android:id="@+id/contact_num_txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="14dp"
        android:text="@string/Pharmacy_address"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_txt" />

    <Button
        android:id="@+id/approve_btn2"
        android:layout_width="172dp"
        android:layout_height="67dp"
        android:layout_marginTop="36dp"
        android:text="@string/approve_btn"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toStartOf="@+id/decline_btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/documents_txt2" />

    <Button
        android:id="@+id/decline_btn2"
        android:layout_width="173dp"
        android:layout_height="71dp"
        android:backgroundTint="#D80A0A"
        android:text="@string/decline_btn"
        app:cornerRadius="40dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/approve_btn2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/approve_btn2" />

    <TextView
        android:id="@+id/pending_approval3"
        android:layout_width="277dp"
        android:layout_height="32dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="24dp"
        android:text="@string/approval_unclicable"
        android:textColor="#0037FF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addDoc3" />

    <Button
        android:id="@+id/addDoc3"
        android:layout_width="359dp"
        android:layout_height="43dp"
        android:layout_marginTop="22dp"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/add_doc"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt4" />

    <TextView
        android:id="@+id/welcome_txt4"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:text="@string/Welcome_banner"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>