<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="@string/pharmacy_name">

    <TextView
        android:id="@+id/welcome_txt3"
        android:layout_width="297dp"
        android:layout_height="47dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/Welcome_banner"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/pharmacy_img"
        android:layout_width="530dp"
        android:layout_height="193dp"
        android:contentDescription="@string/pharmacy_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addPharmacy_null"
        app:srcCompat="@drawable/pharmacy"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/pending_approval2"
        android:layout_width="309dp"
        android:layout_height="31dp"
        android:text="@string/approval_unclicable"
        android:textColor="#0037FF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pharmacy_img" />

    <Button
        android:id="@+id/addPharmacy_null"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:clickable="false"
        android:longClickable="false"
        android:text="@string/add_pha_btn"
        android:textSize="15sp"
        app:cornerRadius="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_txt3" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/PharView"
        android:layout_width="412dp"
        android:layout_height="417dp"
        android:layout_marginTop="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pending_approval2" />

</androidx.constraintlayout.widget.ConstraintLayout>
